<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/labelA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="#b9cfd6"
        android:padding="8dip"
        android:text="@string/general" />

    <RelativeLayout
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelA"
        android:padding="8dip" >

        <TextView
            android:id="@+id/choiceBranch"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/answerBranch"
            android:padding="4dip"
            android:text="@string/my_department" />

        <TextView
            android:id="@+id/answerBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/border"
            android:gravity="center"
            android:minWidth="48dip"
            android:padding="4dip"
            android:text="@string/cse" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item1"
        android:padding="8dip" >

        <TextView
            android:id="@+id/choicePage"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/answerPage"
            android:padding="4dip"
            android:text="@string/my_page" />

        <TextView
            android:id="@+id/answerPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/border"
            android:gravity="center"
            android:minWidth="48dip"
            android:padding="4dip"
            android:text="@string/files" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/clearRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/item2"
        android:background="@drawable/text_selector"
        android:padding="8dip" >

        <TextView
            android:id="@+id/clearLabel"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="4dip"
            android:text="@string/clear" />
    </RelativeLayout>

    <TextView
        android:id="@+id/Other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/clearRel"
        android:background="#b9cfd6"
        android:padding="8dip"
        android:text="@string/other" />

    <RelativeLayout
        android:id="@+id/aboutRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Other"
        android:background="@drawable/text_selector"
        android:padding="8dip" >

        <TextView
            android:id="@+id/aboutLabel"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="4dip"
            android:text="@string/cred_name" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rateRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/aboutRel"
        android:background="@drawable/text_selector"
        android:padding="8dip" >

        <TextView
            android:id="@+id/rateLabel"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="4dip"
            android:text="@string/rate_name" />
    </RelativeLayout>

</RelativeLayout>