<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewuseless"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/lllab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingBottom="20sp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/appteam" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/abs"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/appteam"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/fb_abs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_fb" />

                <ImageView
                    android:id="@+id/play_abs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_play_store" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lllab"
            android:orientation="vertical"
            android:paddingBottom="20sp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/source" />

                <TextView
                    android:id="@+id/mitfiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/mitfiles"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/sourcecredits" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/subev"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/sourcecredits"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/fb_sev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_fb" />

                <ImageView
                    android:id="@+id/yt_sev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_yt" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llls"
            android:orientation="vertical"
            android:paddingBottom="20sp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/specialcreds" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/pvt"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/specialcreds"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/fb_pvt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img"
                    android:src="@drawable/ic_fb" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>